<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_heading">

    <TextView
        android:id="@+id/piano_edit"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="monospace"
        android:gravity="center_vertical|end"
        android:lines="1"
        android:textColor="@color/material_dynamic_neutral100"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:onClick="onTutorial"
        android:text="@string/piano_button_tutorial"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:onClick="onDouble"
        android:text="@string/piano_button_double"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:onClick="onButtonDel"
        android:text="@string/piano_button_del"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:onClick="onButtonDone"
        android:text="@string/piano_button_done"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:onClick="onButtonExit"
        android:text="@string/piano_button_exit"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>